<?xml version="1.0"?>
<package format="2">
  <name>nhevo_ros_example</name>
  <version>1.0.0</version>
  <description>The nhevo ros example</description>

  <maintainer email="zero.stevewalker@gmail.com">stevewalker</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>eigen3</depend>
  <depend>yaml-cpp</depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>prophesee_event_msgs</depend>

  <export>
  </export>
</package>
